--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "laure-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://MalauryB.github.io/laure-conseil",
   "dependencies": {
     "@blueprintjs/core": "^4.3.2",
     "@stitches/react": "^1.2.8",
@@ -18,7 +19,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "twin.macro": "^2.8.2",
     "typescript": "^4.6.4",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
